--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "build:ui": "rm -rf build && cd ../../../helsinki_course/part2/phonebook && npm run build --prod && cp -r build ../../../helsinki_full_stack/part3/part_b",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "dev":"nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.20"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
