--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "build:ui": "rm -rf build && cd ../Full_Stack_Open2020/part2/phonebook && npm run build --prod && cp -r build ../../../Full_Stack_Open_Part3/",
     "deploy": "git push heroku master",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "deploy:full": "npm run build:ui && git add . && git commit -m CSS-overhaul && npm run deploy",
     "logs:prod": "heroku logs --tail",
     "dev": "nodemon index.js",
     "lint": "eslint ."
